[gd_scene load_steps=6 format=3 uid="uid://hjyd1yu5ficr"]

[ext_resource type="Script" uid="uid://b0nt03vf770do" path="res://UI/scripts/main_menu.gd" id="1_ne5gk"]
[ext_resource type="Script" uid="uid://8u72n6rr6i2b" path="res://UI/scripts/button_panel_menu_main.gd" id="2_em8oq"]
[ext_resource type="Theme" uid="uid://nd1oq4ue7ubn" path="res://MainTheme.tres" id="3_em8oq"]

[sub_resource type="LabelSettings" id="LabelSettings_urvjm"]
font_size = 80
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_em8oq"]
bg_color = Color(0.215686, 0.368627, 0.917647, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
corner_detail = 20

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ne5gk")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.462745, 0.764706, 0.945098, 1)

[node name="HeaderBar" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 29.0
offset_right = 122.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="TItle" type="Label" parent="HeaderBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -31.5
offset_right = 202.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Moxira"
label_settings = SubResource("LabelSettings_urvjm")

[node name="ButtonPanelMenuMain" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 232.0
offset_top = 217.0
offset_right = -667.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_em8oq")

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonPanelMenuMain"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.5
offset_top = -106.0
offset_right = -134.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(88.5, 267)
theme = ExtResource("3_em8oq")
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="ButtonPanelMenuMain/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="ShowSaveDir" type="Button" parent="ButtonPanelMenuMain/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_em8oq")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Show Save Dir"

[node name="Settings" type="Button" parent="ButtonPanelMenuMain/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings
"

[node name="Quit" type="Button" parent="ButtonPanelMenuMain/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit
"

[node name="ButtonContent" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.477
anchor_top = 0.21
anchor_right = 0.972
anchor_bottom = 0.955
offset_left = -95.504
offset_top = -0.0800018
offset_right = 19.256
offset_bottom = 0.159973
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_em8oq")

[node name="ScrollContainer" type="ScrollContainer" parent="ButtonContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="Control" parent="ButtonContent/ScrollContainer"]
layout_mode = 2

[node name="SettingsWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "Settings"
initial_position = 2
size = Vector2i(500, 500)
visible = false
wrap_controls = true
unresizable = true
sharp_corners = true
theme = ExtResource("3_em8oq")

[node name="VScrollBar" type="VScrollBar" parent="SettingsWindow"]
offset_right = 8.0
offset_bottom = 8.0

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="ButtonPanelMenuMain/VBoxContainer/PlayButton" to="ButtonPanelMenuMain" method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonPanelMenuMain/VBoxContainer/ShowSaveDir" to="." method="_on_showsdir_h"]
[connection signal="pressed" from="ButtonPanelMenuMain/VBoxContainer/Settings" to="ButtonPanelMenuMain" method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonPanelMenuMain/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="close_requested" from="SettingsWindow" to="ButtonPanelMenuMain" method="_on_settings_window_close_requested"]
